# dwh-migration-tools

./: .gitignore  AGENTS.md  README.md  build.gradle  gradle.properties  gradlew  gradlew.bat  precommit.sh  settings.gradle
.github/: CODEOWNERS  dependabot.yml  labeler.yml
.security/: known_cves.yml  known_cves_schema.json
buildSrc/: build.gradle
client/: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  batch_sql_translator.py  config.yaml  config_parser.py  gcloud_auth_helper.py  gcs_util.py  generate-alpha.sh  macro_processor.py  macros_replacement_map.yaml  main.py  noxfile.py  object_mapping.json  object_mapping_parser.py  package-lock.json  package.json  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  validation.py
client/bqms_run/: encoding.py  hooks.py  ksh.py  macros.py  main.py  paths.py  workflow.py
client/bqms_run/gcp/: gcs.py
client/bqms_run/gcp/bqms/: request.py  source_env.py  translation_type.py
client/config/: README.md  macros.yaml
client/dwh_migration_client/: __init__.py  batch_sql_translator.py  config.py  config_parser.py  custom_macros.py  gcloud_auth_helper.py  gcs_util.py  macro_expander.py  macro_main.py  macro_processor.py  main.py  object_mapping_parser.py  object_name_mapping.py  translation_type.py  validation.py
client/examples/teradata/bteq/: provision.sh  run.sh
client/examples/teradata/bteq/config/: config.yaml
client/examples/teradata/bteq/input/: foo.sql  simple.ksh  with-flags.ksh
client/examples/teradata/sql/: deprovision.sh  provision.sh  run.sh
client/examples/teradata/sql/input/: create-procedures.sql  create-table-partitioned-1.sql  create-table-partitioned-2.sql  date-add-integer.sql  date-format.sql  date-truncation.sql  default-ts.sql  json-table.sql  metadata-example.sql  otranslate.sql  recursive-view-1.sql  set-table.sql  spl-employee.sql  sum-case.sql  type-period.sql  with-cte.sql
client/examples/teradata/sql/input/subdir/: test1.sql  test2.sql
client/google/cloud/bigquery/migration/: __init__.py
client/google/cloud/bigquery/migration_v2alpha/: __init__.py
client/google/cloud/bigquery/migration_v2alpha/services/: __init__.py
client/google/cloud/bigquery/migration_v2alpha/services/migration_service/: async_client.py  client.py  pagers.py
client/google/cloud/bigquery/migration_v2alpha/services/migration_service/transports/: base.py  grpc.py  grpc_asyncio.py
client/google/cloud/bigquery/migration_v2alpha/types/: __init__.py  assessment_task.py  migration_entities.py  migration_error_details.py  migration_metrics.py  migration_service.py  translation_config.py  translation_task.py
client/google/cloud/bigquery_migration/: __init__.py
client/google/cloud/bigquery_migration_v2alpha/: __init__.py
client/google/cloud/bigquery_migration_v2alpha/services/migration_service/: async_client.py  client.py  pagers.py
client/google/cloud/bigquery_migration_v2alpha/services/migration_service/transports/: base.py  grpc.py  grpc_asyncio.py
client/google/cloud/bigquery_migration_v2alpha/types/: __init__.py  migration_entities.py  migration_error_details.py  migration_metrics.py  migration_service.py  translation_config.py  translation_task.py
client/input/: 1.sql  2.sql
client/tests/integration/: conftest.py  test_bteq.py  test_teradata.py  test_translation.py
client/tests/packaging/: Dockerfile-RedHat  Dockerfile-Ubuntu  redhat-google-cloud-sdk.repo  run-packaging-tests.sh
client/tests/unit/: test_ksh.py  test_macros.py
client/tests/unit/test_ksh.input/: commented.ksh  empty.ksh  iso_8859_1.ksh  no-prefix.ksh  utf8.ksh  with-prefix.ksh
cloud/: .gcloudignore  CONTRIBUTING.md  Dockerfile  README.md  noxfile.py  package-lock.json  pyproject.toml
dbsync/: README.md  build.gradle  settings.gradle
dts-transfer-status/: .gitignore  README.md
dumper/: CONTRIBUTING.md  README.md  build.gradle  settings.gradle
dumper-integration-tests/: settings.gradle
exemplary_client/: README.md  batch_sql_translator.py  config.yaml  config_parser.py  macros_replacement_map.yaml  main.py  requirements.txt  sql_processor.py
gradle/: libs.versions.toml  license-allowed.json
logs/: automatic_clustering_history-au_2024-09-23T00:00:00Z.csv  compilerworks-arguments.txt  compilerworks-format.txt  compilerworks-metadata.yaml  compilerworks-version.txt  copy_history-au_2024-09-19T00:00:00Z.csv  database_replication_usage_history-au_2024-09-21T00:00:00Z.csv  login_history-au_2024-09-18T00:00:00Z.csv  login_history-au_2024-09-19T00:00:00Z.csv  login_history-au_2024-09-20T00:00:00Z.csv  login_history-au_2024-09-21T00:00:00Z.csv  login_history-au_2024-09-23T00:00:00Z.csv  login_history-au_2024-09-24T00:00:00Z.csv  login_history-au_2024-09-25T00:00:00Z.csv  metering_daily_history_2024-09-18T00:00:00Z.csv  metering_daily_history_2024-09-19T00:00:00Z.csv  metering_daily_history_2024-09-20T00:00:00Z.csv  metering_daily_history_2024-09-21T00:00:00Z.csv  metering_daily_history_2024-09-22T00:00:00Z.csv  metering_daily_history_2024-09-23T00:00:00Z.csv  query_history-au_2024-09-18T19:00:00Z.csv  (+87 more)
(+1846 files in other folders)
